feat: criando o pacote de servico